--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   firebase_core: ^2.24.2
   google_fonts: ^6.1.0
   font_awesome_flutter: ^10.6.0
+  google_sign_in: ^6.2.1
+  sign_in_with_apple: ^5.0.0
+  crypto: ^3.0.3
+  firebase_auth: ^4.15.3
 
 dev_dependencies:
   flutter_test:
